# cutebot

./: .env.example  .gitignore  Cargo.toml  LICENSE.txt  README.md  flake.nix  pre-commit
.sqlx/: query-a12510282478463b93d5997faac628602014bd6282c635a599f05ca2f9912329.json  query-c92f2a144484831d4955ef29df67070cb2eb2e3508e91075e02dd5456669db81.json  query-d9327af4cbd5fffe9b8af3f43dffecd261a5a3aa6fca08fd33da8c0b1f0ac696.json
migrations/: 20260307134655_initial_migration.sql
src/: event_handler.rs  main.rs
src/commands/: age.rs  baguette.rs  ben.rs  calc.rs  getemote.rs  mod.rs  ping.rs  temp.rs
src/commands/baguette/: leaderboard.rs  mod.rs  reset.rs
src/commands/temp/: convert.rs  location.rs  mod.rs
src/event_handler/: chatbot.rs  landmine.rs  member_join.rs  mod.rs  troll_cgahq_bot.rs  update_leaderboard.rs
src/utils/: conversions.rs  fetch_emote.rs  mod.rs  processor.rs  token.rs  tokenizer.rs
