[package]
name = "cutebot"
version = "0.1.0"
edition = "2024"
authors = ["Grobochan"]
description = "A silly discord bot made by Grobochan for her server"
repository = "https://github.com/grobo-chan/cutebot"
license = "MIT"
readme = "README.md"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.32"
poise = "0.6.1"
rand = "0.10.0"
serenity = "0.12.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
